--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@
 	float: left;
 	width: 700px;
 	margin-top: 5px;
-	margin-left: 40px;
+	margin-left: 0px; /*40px*/
 	margin-right: 5px;
 	margin-bottom: 50px;
 	}
@@ -187,7 +187,7 @@
 		/* top, right, bottom, left */		
 		margin:40px 0 100px 0px; 
 		
-		margin-left: 25%; /* Start from 25% and finish at 75% : ALL Center*/
+		margin-left: 20%; /* Start from 25% and finish at 75% : ALL Center*/
 		width:50%; /* <div class="bodyCenter"> ~~ </div> */			
 	}
 	
